bk_ida/gccida/g0/ssa_const_prop
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:1475:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0 = ( edge *)xmalloc( 8LL * edges->num_edges); 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:1481:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[index] = curredge->succ_next; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:1495:7: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
free( edge_info_0); 
      ^~~~~~~~~~~
      edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:1496:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0 = 0LL; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/ssa-ccp.c:1505:16: error: expected expression
target_ira_int::~target_ira_int( df_analyzer); 
               ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ssa_const_prop/src/obj/ssa-ccp.o] Error 1
